--- a/food_sales_predictions.ipynb
+++ b/food_sales_predictions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "food-sales-predictions.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0OsuXmK7Wg3QR3KDFdbO3",
+      "authorship_tag": "ABX9TyP7aXm1N3/y+CymxRSditl/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,32 +40,32 @@
       ],
       "metadata": {
         "id": "nCp9J12yF0qW",
-        "outputId": "c7a788f7-db7d-4fdf-8cc8-09496a2ae928",
+        "outputId": "4c0bb747-381d-4d48-f837-1ffecd38cfcd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "7x9ovFO7Lgk6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 357
         },
-        "outputId": "95dbc985-230e-4e83-dfd7-d0ebb6f15357"
+        "outputId": "4d11b4bb-7703-4f55-fb10-95af5bdab0f4"
       },
       "outputs": [
         {
@@ -73,7 +73,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-c2f3e77f-0f1d-43c9-ac5c-582527f73f91\">\n",
+              "  <div id=\"df-c2a5b789-1049-49d2-970e-78eab46180b7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -186,7 +186,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c2f3e77f-0f1d-43c9-ac5c-582527f73f91')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c2a5b789-1049-49d2-970e-78eab46180b7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -237,12 +237,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c2f3e77f-0f1d-43c9-ac5c-582527f73f91 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c2a5b789-1049-49d2-970e-78eab46180b7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c2f3e77f-0f1d-43c9-ac5c-582527f73f91');\n",
+              "          const element = document.querySelector('#df-c2a5b789-1049-49d2-970e-78eab46180b7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -275,12 +275,12 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 3
         }
       ],
       "source": [
         "# Lets mount the drive an read the data set\n",
-        "sales_df = pd.read_csv(\"/content/drive/MyDrive/CodingDojo/Data/sales_predictions.csv\")\n",
+        "sales_df = pd.read_csv(\"/content/drive/MyDrive/CodingDojo/Stack_2/Data/sales_predictions.csv\")\n",
         "sales_df.head()"
       ]
     },
@@ -320,12 +320,12 @@
       ],
       "metadata": {
         "id": "I46UZRoeGOWk",
-        "outputId": "ef68c12f-ca2b-402d-9842-0e19a31f3c6f",
+        "outputId": "53708b68-99fc-45b8-fd5d-57a6c21dd4c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +347,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 4
         }
       ]
     },
@@ -374,20 +374,20 @@
       ],
       "metadata": {
         "id": "mXktNoj8IIqj",
-        "outputId": "33a03d57-6754-4fc9-fbb9-b05fc5896e52",
+        "outputId": "1e73ce97-71c1-4c8a-a5c9-746e9da70975",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-74fc8303-f814-4447-8dbf-7b3760c82888\">\n",
+              "  <div id=\"df-8d52bbef-0cdb-4ec4-b370-c12ac673adb7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -471,7 +471,7 @@
               "</table>\n",
               "<p>8523 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-74fc8303-f814-4447-8dbf-7b3760c82888')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d52bbef-0cdb-4ec4-b370-c12ac673adb7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -522,12 +522,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-74fc8303-f814-4447-8dbf-7b3760c82888 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8d52bbef-0cdb-4ec4-b370-c12ac673adb7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-74fc8303-f814-4447-8dbf-7b3760c82888');\n",
+              "          const element = document.querySelector('#df-8d52bbef-0cdb-4ec4-b370-c12ac673adb7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -566,7 +566,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 5
         }
       ]
     },
@@ -588,12 +588,12 @@
       ],
       "metadata": {
         "id": "_UZCyfK6MLGx",
-        "outputId": "817ee740-0f75-4a64-ff32-e4f5fe50955c",
+        "outputId": "5f9d64be-803d-45aa-ad51-f9e12b738f1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,12 +623,12 @@
       ],
       "metadata": {
         "id": "Y9r7Q9cvR70z",
-        "outputId": "f1e3500a-884b-4e05-e999-e1d14c2f66ce",
+        "outputId": "dd109ba2-65df-4efc-d9bd-222af24a38af",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -638,7 +638,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 7
         }
       ]
     },
@@ -652,13 +652,13 @@
       ],
       "metadata": {
         "id": "F5OlbvBjHqBP",
-        "outputId": "1984f519-c739-49a3-d801-0547637a0d66",
+        "outputId": "92da0c1a-7b19-4e52-83cc-965e72d67a5f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -689,12 +689,12 @@
       ],
       "metadata": {
         "id": "QD_vlGMJPGDC",
-        "outputId": "06971d0f-00a0-4a8c-a661-fc2583ca3434",
+        "outputId": "ec39b9a6-2352-4959-8ff4-2e27f61c246c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,7 +704,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 9
         }
       ]
     },
@@ -735,13 +735,13 @@
       ],
       "metadata": {
         "id": "oyb8d_vpJyJ3",
-        "outputId": "a3da0c42-5a11-493e-9629-a3ace7ff49b4",
+        "outputId": "b8c5858f-c099-4395-b6ae-0cef70f3f87a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 405
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -779,9 +779,9 @@
           "height": 347
         },
         "id": "JbIEkhRwThyh",
-        "outputId": "e19e187a-93c2-4ff3-ebe2-6535eb327429"
+        "outputId": "c4ed12fd-1002-4a8a-f469-b4b759d9312f"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -819,9 +819,9 @@
           "height": 35
         },
         "id": "3Zs_QbE2WRDX",
-        "outputId": "9496e33c-c3d8-49d5-d729-4128be95b9b3"
+        "outputId": "bc5314fd-0d25-4c8e-eb5b-aa7fec9a4073"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -834,7 +834,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 68
+          "execution_count": 12
         }
       ]
     },
@@ -849,9 +849,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PcAEYEbjT8ll",
-        "outputId": "9f3df860-692f-448d-e8f4-bf82eacc704d"
+        "outputId": "a7df5ae4-7b4d-4165-9d13-97779c095f97"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -869,7 +869,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 13
         }
       ]
     },
@@ -897,9 +897,9 @@
           "height": 347
         },
         "id": "gFHpkvO8Yq3D",
-        "outputId": "800a9cc4-6a39-4476-c2f3-13a87b1b2f39"
+        "outputId": "6ccaae4e-4bff-4ad2-da28-0a5dbf5c7943"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -944,9 +944,9 @@
           "height": 430
         },
         "id": "r124gV8zb5ad",
-        "outputId": "92c2f53a-d284-434e-ca5d-0c93b1408ebb"
+        "outputId": "e51804d6-08e0-4630-d54c-124aab02e261"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -959,7 +959,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 15
         },
         {
           "output_type": "display_data",
@@ -988,7 +988,7 @@
       "metadata": {
         "id": "mZBLuLfOFEo3"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1000,7 +1000,96 @@
       "metadata": {
         "id": "3feBzQAbLp3t"
       },
-      "execution_count": null,
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Stack 2: Data Processing"
+      ],
+      "metadata": {
+        "id": "I48EwVnRZUXB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ok, since we now ahve a target to which we are seeking to predict `Item_Outlet_Sales` we can now 'isolate' that column, the same way the world is isolating Russia. \n"
+      ],
+      "metadata": {
+        "id": "5aLI8RjcaH96"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# lets make some skilearn imports\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.compose import make_column_selector\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.compose import make_column_transformer\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn import set_config\n",
+        "set_config(display='diagram')"
+      ],
+      "metadata": {
+        "id": "eQ10VHPmb_pF"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "target = sales_df.Item_Outlet_Sales\n",
+        "features = sales_df.drop(columns='Item_Outlet_Sales')"
+      ],
+      "metadata": {
+        "id": "u16TEu17Z_8v"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now let make the preprocessing object "
+      ],
+      "metadata": {
+        "id": "vg4HqxH7ZXim"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# lets split the data \n",
+        "X_train, X_test, y_train, y_test = train_test_split(features, target, random_state=42)\n",
+        "# let make some imputers\n",
+        "freq_imputer = SimpleImputer(strategy='most_frequent')\n",
+        "mean_imputer = SimpleImputer(strategy='mean')\n",
+        "# let's make our one hot encoder\n",
+        "ohe = OneHotEncoder(handle_unknown='ignore', sparse=False)\n",
+        "# Scaler\n",
+        "scaler = StandardScaler()\n",
+        "# now let's the piplines for each object \n",
+        "numeric_pipe = make_pipeline(mean_imputer, scaler)\n",
+        "categorical_pipe = make_pipeline(freq_imputer, ohe)\n",
+        "# first then selectors\n",
+        "cat_selector = make_column_selector(dtype_include='object')\n",
+        "num_selector = make_column_selector(dtype_include='number')\n",
+        "# Tuples for Column Transformer\n",
+        "number_tuple = (numeric_pipe, num_selector)\n",
+        "category_tuple = (categorical_pipe, cat_selector)\n",
+        "# preprocessor\n",
+        "preprocessor = make_column_transformer(number_tuple, category_tuple)"
+      ],
+      "metadata": {
+        "id": "sdQuw8M_dGQ_"
+      },
+      "execution_count": 25,
       "outputs": []
     }
   ]
